src/test/resources/amyc/typer/failing/SeqError3.grading.amy
object SeqError
  val x: Boolean = (true; 2);
  0
end SeqError
